--- a/backend/public/assets/css/all.css
+++ b/backend/public/assets/css/all.css
@@ -1,60 +1,29 @@
-.tim-row {
-  margin-bottom: 20px;
+/* 一言コメント */
+.talk {
+
+}
+.talk .talk_left p:before {  /* 左ふきだしの左三角を描画 */
+	content: '';
+	position:absolute;
+	top:8px;
+	left:-20px;
+	border: 12px solid transparent;
+	border-right:12px solid white;
+}
+.talk .talk_left p { /* 左ふきだしの本体 */
+	display:inline-block;
+	position:relative;
+	background-color:white;
+	border-radius:10px;
+	padding:10px;
+	margin:0 0 0 10px;
+  color:black;
 }
 
-.tim-white-buttons {
-  background-color: #777777;
-}
-
-.typography-line {
-  padding-left: 25%;
-  margin-bottom: 35px;
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.pick-class-label {
-  border-radius: 8px;
-  border: 1px solid #E3E3E3;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 75%;
-  font-weight: bold;
-  line-height: 1;
-  margin-right: 10px;
-  padding: 23px;
-  text-align: center;
-  vertical-align: baseline;
-  white-space: nowrap;
-}
-
-.offline-doc .page-header {
-  display: flex;
-  align-items: center;
-}
-
-.typography-line span {
-  bottom: 10px;
-  color: #c0c1c2;
-  display: block;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 13px;
-  left: 0;
-  margin-left: 20px;
-  position: absolute;
-  width: 260px;
-  text-transform: none;
-}
-
-.tim-row {
-  padding-top: 60px;
-}
-
-.tim-row h3 {
-  margin-top: 0;
+.clear-decoration {
+    border: none;  /* 枠線を消す */
+    outline: none; /* クリックしたときに表示される枠線を消す */
+    background: transparent; /* 背景の灰色を消す */
 }
 
 .switch {
